[tool.poetry]
name = "pdpcli"
version = "0.1.0"
description = ""
authors = ["altescy <altescy@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
pdpipe = "^0.0.53"
nltk = "^3.5"
colt = "^0.5.0"
omegaconf = "^2.0.6"
jsonnet = "^0.17.0"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = "^0.36.2"
mypy = "^0.812"
pylint = "^2.6.2"

[tool.poetry.scripts]
pdpcli = "pdpcli.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
