[tool.poetry]
name = "pdpcli"
version = "0.2.0"
description = "PdpCLI is a pandas DataFrame processing CLI tool which enables you to build a pandas pipeline from a configuration file."
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/altescy/pdpcli"
keywords=["python", "cli", "pandas", "csv"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "pdpcli" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
pdpipe = "^0.0.53"
nltk = "^3.5"
omegaconf = "^2.0.6"
jsonnet = "^0.17.0"
scikit-learn = "^0.24.1"
colt = "^0.6.1"
mysqlclient = {version = "^2.0.3", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = "^0.36.2"
mypy = "^0.812"
pylint = "^2.6.2"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.poetry.scripts]
pdp = "pdpcli.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
